Renamed column engine from engine_configuration table to provider and rename table engine_configuration to ai_models. Also rename SerpApi to Serp.
